--- a/templates/register.html
+++ b/templates/register.html
@@ -25,10 +25,18 @@
       <div class="bg-white py-4 shadow dark:bg-gray-800">
         <div class="max-w-6xl mx-auto">
           <div class="flex items-center lg:justify-between justify-around">
-            <a href="trending.html">
+            <a href="#">
               <b><h1 style="font-size: 1.5rem">My Blog</h1></b>
             </a>
-
+            <div
+              class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm"
+            >
+              <a
+                href="/login/"
+                class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white"
+                >Log in</a
+              >
+            </div>
             <div
               class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm"
             ></div>
