--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -37,33 +37,8 @@
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
                         <form action="" method="POST">
                         {% csrf_token %}
-                       <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                           <div>
-                               <label for="">First name</label>
-                               <input type="text" placeholder="Your first name.." class="shadow-none bg-gray-100">
-                           </div>
-                           <div>
-                               <label for="">Last name</label>
-                               <input type="text" placeholder="Your last name.." class="shadow-none bg-gray-100">
-                            </div>
-                            <div class="col-span-2">
-                                <label for="">Email</label>
-                                <input type="email" placeholder="smth@example.com"  class="shadow-none bg-gray-100">
-                            </div>
-                            <div class="col-span-2">
-                              <label for="">Profile picture</label>  
-                              <input type="file" name="profile_picture" placeholder=""
-                          </div> 
-                            <div class="col-span-2">
-                                <label for="about">Bio</label>  
-                                <textarea id="bio" name="bio" rows="3"  class="shadow-none bg-gray-100"></textarea>
-                            </div> 
-                            <div class="col-span-2">
-                                <label for="">Location</label>
-                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
-                            </div>
-                       </div> 
-    
+                        {{form.as_p}}
+                        <br>
                        <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
                            <button type="submit" class="button bg-blue-700"> Save </button>
                        </div>
