--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,25 +22,20 @@
         <figure>
           <img src="{% static 'images/resources/timeline-1.jpg' %}" alt="" />
         </figure>
-        <form>
+         <form>
           <div class="add-btn">
-            <span style="color: white; font-size: 27px; margin-right: 520px"
+            <span style="color: white; font-size: 27px; margin-right: 600px"
               ><b
-                ><u><a href="/">Home</a></u></b
+                ><u><a href="/main/">Home</a></u></b
               ></span
-            >
-            <span style="color: white; font-size: 27px"><b>11 Post</b></span>
+            > 
+            <span style="color: white; font-size: 27px"><b></b></span>
             <span style="color: white; font-size: 27px"
-              ><b>1.7m followers</b></span
-            >
-            <span style="color: white; font-size: 27px"
-              ><b>3.5k following</b></span
-            >
-            <a href="" title="" data-ripple=""
-              ><button style="background-color: #ffc0cb; border: #ffc0cb">
-                Follow
-              </button></a
-            >
+              ><b>{{user.username}}</b></span>
+            
+            <a href="/update_profile/" style="background-color: #ffc0cb; border: #ffc0cb">
+                <b>update profile</b>
+            </a>
           </div>
         </form>
         <div class="container-fluid">
@@ -53,10 +48,6 @@
                     style="height: 250px; width: 100%"
                     alt=""
                   />
-                  <form class="edit-phto">
-                    <i class="fa fa-camera-retro"></i>
-                    <label class="fileContainer">
-                      <a href="#account-settings">Upload Profile Photo</a>
                     </label>
                   </form>
                 </figure>
@@ -83,84 +74,25 @@
         </div>
       </div>
     </section>
+    
     <!-- top area -->
-    <section>
-      <div class="bio">Bio goes here...</div>
-    </section>
+    <div>
+    <span class="block capitalize font-semibold">Name:   <b>{{profile.firstname}}</b></span>
+    </div>
+    <div>
+    <span class="block capitalize font-semibold">Surname:   <b>{{profile.lastname}}</b></span>
+    </div>
+    <div>
+    <span class="block capitalize font-semibold">Bio:   <b>{{profile.bio}}</b></span>
+    </div>
+    <div>
+    <span class="block capitalize font-semibold">Location:   <b>{{profile.location}}</b></span>
+    </div>
 
-    <section>
-      <div class="gap gray-bg">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="row" id="page-contents">
-                <div class="col-lg-3">
-                  <aside class="sidebar static"></aside>
-                </div>
-                <!-- sidebar -->
 
-                <div class="col-lg-6">
-                  <div class="central-meta">
-                    <ul class="photos">
-                      <li>
-                        <a
-                          class="strip"
-                          href="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                          title=""
-                          data-strip-group="mygroup"
-                          data-strip-group-options="loop: false"
-                        >
-                          <img
-                            src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                            style="height: 250px; width: 300px"
-                            alt=""
-                        /></a>
-                      </li>
-
-                      <li>
-                        <a
-                          class="strip"
-                          href="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                          title=""
-                          data-strip-group="mygroup"
-                          data-strip-group-options="loop: false"
-                        >
-                          <img
-                            src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                            style="height: 250px; width: 300px"
-                            alt=""
-                        /></a>
-                      </li>
-
-                      <li>
-                        <a
-                          class="strip"
-                          href="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                          title=""
-                          data-strip-group="mygroup"
-                          data-strip-group-options="loop: false"
-                        >
-                          <img
-                            src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png"
-                            style="height: 250px; width: 300px"
-                            alt=""
-                        /></a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!-- photos -->
-                </div>
-                <!-- centerl meta -->
-                <div class="col-lg-3">
-                  <aside class="sidebar static"></aside>
-                </div>
-                <!-- sidebar -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div>
+    <a href="/delete_profile/" style="background-color: #ffc0cb; border: #ffc0cb"><b>delete_profile</b></a>
+    </div>
 
     <script
       data-cfasync="false"
