--- a/templates/register.html
+++ b/templates/register.html
@@ -62,7 +62,7 @@
             {% endfor %}
           </div>
           <form action="" method="POST">
-            {% csrf_token %}
+            {% csrf_token %} {{ form.as_table }} {% comment %}
             <input
               type="text"
               name="username"
@@ -91,6 +91,7 @@
               class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
               style="border: 1px solid #d3d5d8 !important"
             />
+            {% endcomment %}
             <button
               type="submit"
               class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
