changed register view to register function

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -91,7 +91,7 @@
 
 
     <div>
-    <a href="/delete_profile/" style="background-color: #ffc0cb; border: #ffc0cb"><b>delete_profile</b></a>
+    <a href="/delete_profile/" style="background-color: #ffc0cb; border: #ffc0cb"><b>delete profile</b></a>
     </div>
 
     <script
