--- a/templates/register.html
+++ b/templates/register.html
@@ -62,36 +62,8 @@
             {% endfor %}
           </div>
           <form action="" method="POST">
-            {% csrf_token %} {{ form.as_table }} {% comment %}
-            <input
-              type="text"
-              name="username"
-              placeholder="Username"
-              class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
-              style="border: 1px solid #d3d5d8 !important"
-            />
-            <input
-              type="email"
-              name="email"
-              placeholder="Email"
-              class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
-              style="border: 1px solid #d3d5d8 !important"
-            />
-            <input
-              type="password"
-              name="password"
-              placeholder="Password"
-              class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
-              style="border: 1px solid #d3d5d8 !important"
-            />
-            <input
-              type="password"
-              name="password2"
-              placeholder="Confirm password"
-              class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
-              style="border: 1px solid #d3d5d8 !important"
-            />
-            {% endcomment %}
+            {% csrf_token %} {{ form.as_p }}
+            <br />
             <button
               type="submit"
               class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
