added number of posts on profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,14 +24,14 @@
         </figure>
          <form>
           <div class="add-btn">
-            <span style="color: white; font-size: 27px; margin-right: 600px"
+            <span style="color: white; font-size: 27px; margin-right: 400px"
               ><b
                 ><u><a href="/main/">Home</a></u></b
               ></span
             > 
-            <span style="color: white; font-size: 27px"><b></b></span>
+            <span style="color: white; font-size: 27px"><b>{{user.username}}</b></span>
             <span style="color: white; font-size: 27px"
-              ><b>{{user.username}}</b></span>
+              >Number of posts:  <b>{{number_of_posts}}</b></span>
             
             <a href="/update_profile/" style="background-color: #ffc0cb; border: #ffc0cb">
                 <b>update profile</b>
