fixed registration bug

--- a/templates/register.html
+++ b/templates/register.html
@@ -51,26 +51,28 @@
           class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
         >
           <h1 class="lg:text-3xl text-xl font-semibold mb-6">Sign Up</h1>
-          <div>
-            <style>
-              h5 {
-                color: red;
-              }
-            </style>
-            {% for message in messages %}
-            <h5>{{message}}</h5>
-            {% endfor %}
-          </div>
           <form action="" method="POST">
-            {% csrf_token %} {{ form.as_p }}
+            {% csrf_token %}
             <br />
-            <button
-              type="submit"
-              class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
-            >
-              Sign Up
-            </button>
-            <div class="text-center mt-5 space-x-2"></div>
+            {% for field in form %}
+            {% for error in form.user.errors %}
+            <div class="alert alert-danger">
+              <p>{{ error }}</p>
+            </div>
+            {% endfor %}
+            {% endfor %}
+            
+            {{ form.as_p }}
+              
+              <br />
+              <button
+                type="submit"
+                class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
+              >
+                Sign Up
+              </button>
+              <div class="text-center mt-5 space-x-2"></div>
+            </li>
           </form>
         </div>
       </div>
