--- a/templates/main.html
+++ b/templates/main.html
@@ -56,10 +56,8 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="setting.html"> Account setting </a> </li>
-                                <li><a href="explore.html">explore </a> </li>
-                                <li><a href="#"> Help </a> </li>
-                                <li><a href="signin.html"> Log Out</a></li>
+                                <li><a href="/profile/">View Profile</a></li>
+                                <li><a href="/logout/">Log Out</a></li>
                             </ul>
                         </div>
 
@@ -68,10 +66,6 @@
             </header>
 
             <div class="container m-auto">
-
-                <!--<h1 class="lg:text-2xl text-lg font-extrabold leading-none text-gray-900 tracking-tight mb-5"> Feed </h1>--->
-
-                <div class="lg:flex justify-center lg:space-x-10 lg:space-y-0 space-y-5">
 
                     <!-- left sidebar-->
                     <div class="space-y-5 flex-shrink-0 lg:w-7/12">
@@ -206,12 +200,7 @@
                         </div>
     
                         
-                        <!-- Load more-->
-                        <div class="flex justify-center mt-6" id="toggle" uk-toggle="target: #toggle ;animation: uk-animation-fade">
-                            <a href="#"
-                                class="bg-white  font-semibold my-3 px-6 py-2 rounded-full shadow-md  ">
-                                Load more ..</a>
-                        </div>
+                        
  
                         <!-- post 3-->
                         <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0" id="toggle" hidden>
@@ -473,13 +462,7 @@
   
                         </div>
                         
-                        <!-- Load more-->
-                        <div class="flex justify-center mt-6" id="toggle" hidden>
-                            <a href="#"
-                                class="bg-white  font-semibold my-3 px-6 py-2 rounded-full shadow-md  ">
-                                Load more ..</a>
-                        </div>
-
+                   
 
                     </div>
 
