--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -43,7 +43,7 @@
           class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
         >
           <h1 class="lg:text-3xl text-xl font-semibold mb-6">Upload Post</h1>
-          <form action="" method="POST">
+          <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %} {{form.as_p}}
             <br />
             <button
