--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -35,7 +35,7 @@
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-                        <form action="" method="POST">
+                        <form action="" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{form.as_p}}
                         <br>
