--- a/templates/main.html
+++ b/templates/main.html
@@ -77,18 +77,28 @@
                     <!-- left sidebar-->
                     <div class="space-y-5 flex-shrink-5 lg:w-7/20">
 
-                        <!-- post 1-->
                         <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
     
-                            <!-- post header-->
+                            <!-- post -->
+                            {% for p in posts %}
                             <div class="flex justify-between items-center px-4 py-3">
                                 <div class="flex flex-1 items-center space-x-4">
                                     <a href="#">
                                         <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
-                                            <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
+                                            {% if profile.profile_picture %}
+                                            <img
+                                              src="{{profile.profile_picture.url}}"
+                                              class="bg-gray-200 border border-white rounded-full w-8 h-8"
+                                              alt="">
+                                            {% else %}
+                                            <img
+                                              src="{% static 'images/blank-profile-picture.png' %}"
+                                              class="bg-gray-200 border border-white rounded-full w-8 h-8"
+                                              alt="">
+                                            {% endif %}
                                         </div>
                                     </a>
-                                    <span class="block capitalize font-semibold "> {} </span> 
+                                    <span class="block capitalize font-semibold "> {{p.author}} </span> 
                                 </div>
                               <div>
                                 <div class="bg-white w-56 shadow-md mx-auto p-2 mt-12 rounded-md text-gray-500 hidden text-base border border-gray-100  " uk-drop="mode: hover;pos: top-right">             
@@ -97,6 +107,19 @@
                             </div>
     
                             <div uk-lightbox>
+                                
+
+                                                        <h2>{{p.title}}</h2>
+
+                                {% if p.image %}
+                                <p img class="img-article-left thumb" src="{{p.image.url}}"></p>
+                                {% endif %}
+
+                                <h1>{{p.text}}</h1>
+
+                                <h1>{{p.created_at}}</h1>
+
+                                
                             </div>
                             
     
@@ -124,7 +147,7 @@
                                     <div class="flex items-center">
                                     </div>
                                     <div class="">
-                                         <strong>{}</strong>likes and<strong>{}</strong>comments
+                                         <strong>{{p.likes}}</strong>likes and<strong>{}</strong>comments
                                     </div>
                                 </div>
 
@@ -132,59 +155,10 @@
                                         </div>
                                     </div>
                                 </div>
+                                
 
-                                <div class="bg-gray-100 bg-gray-100 rounded-full rounded-md relative ">
-                                    <input type="text" placeholder="post a comment" class="bg-transparent max-h-10 shadow-none">
-                                    <div class="absolute bottom-0 flex h-full items-center right-0 right-3 text-xl space-x-2">
-                                    </div>
-                                </div>
-    
-                            </div>
-    
-                        </div>
-    
-                        
-                        
- 
-                      
-                                </div>
-    
-                            </div>
-    
-                        </div>
-            
-                          </div>
-  
-                        </div>
-                        
-                   
-
-                    </div>
-
-
-                            </div>
-
-                        </div>
-
-                      
-
-                    </div>
-
-                </div>               
-          
-
-            </div>
-
-        </div>
-
-    </div>
-
-
-
-
-
-
-
+                             
+                                {% endfor %}
 
  <!-- Scripts
     ================================================== -->
