--- a/templates/main.html
+++ b/templates/main.html
@@ -72,6 +72,7 @@
                 </div>
             </header>
 
+            {% for p in posts %}
             <div class="container m-auto">
 
                     <!-- left sidebar-->
@@ -80,7 +81,6 @@
                         <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
     
                             <!-- post -->
-                            {% for p in posts %}
                             <div class="flex justify-between items-center px-4 py-3">
                                 <div class="flex flex-1 items-center space-x-4">
                                     <a href="#">
@@ -147,7 +147,8 @@
                                     <div class="flex items-center">
                                     </div>
                                     <div class="">
-                                         <strong>{{p.likes}}</strong>likes and<strong>{}</strong>comments
+                                         <strong>{{p.likes}}</strong>likes and<strong>
+                                             {{number_of_comments}}</strong>comments
                                     </div>
                                 </div>
 
