--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10037,4 +10037,17 @@ aside.sidebar.full-style {
     text-transform: uppercase;
 }
 
+.pagination {
+    display: inline-block;
+  }
+  
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
 
+.center {
+    text-align: center;
+  }
