--- a/templates/main.html
+++ b/templates/main.html
@@ -98,7 +98,9 @@
                                             {% endif %}
                                         </div>
                                     </a>
+                                    <a href="/profile?user_pk={{p.author.pk}}"
                                     <span class="block capitalize font-semibold "> {{p.author}} </span> 
+                                </a>
                                 </div>
                               <div>
                                 <div class="bg-white w-56 shadow-md mx-auto p-2 mt-12 rounded-md text-gray-500 hidden text-base border border-gray-100  " uk-drop="mode: hover;pos: top-right">             
