implemented viewing another profile feature

--- a/templates/main.html
+++ b/templates/main.html
@@ -98,7 +98,7 @@
                                             {% endif %}
                                         </div>
                                     </a>
-                                    <a href="/profile?user_pk={{p.author.pk}}"
+                                    <a href="/another_profile?user_pk={{p.author.pk}}"
                                     <span class="block capitalize font-semibold "> {{p.author}} </span> 
                                 </a>
                                 </div>
