--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>Profile {{profile_user.user.username}}</title>
+    <title>Profile {{user.username}}</title>
 
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -29,9 +29,9 @@
                 ><u><a href="/main/">Home</a></u></b
               ></span
             > 
-            <span style="color: white; font-size: 27px"><b>{{profile_user.user.username}}</b></span>
+            <span style="color: white; font-size: 27px"><b>{{user.username}}</b></span>
             <span style="color: white; font-size: 27px"
-              >Number of posts:  <b>{{post_number}}</b></span>
+              >Number of posts:  <b>{{number_of_posts}}</b></span>
             
             <a href="/update_profile/" style="background-color: #ffc0cb; border: #ffc0cb">
                 <b>update profile</b>
@@ -45,7 +45,7 @@
                 <figure>
                   {% if profile.profile_picture %}
                   <img
-                    src="{{user_profile.profile_picture.url}}"
+                    src="{{profile.profile_picture.url}}"
                     style="height: 250px; width: 100%"
                     alt="">
                   {% else %}
@@ -84,16 +84,16 @@
     
     <!-- top area -->
     <div>
-    <span class="block capitalize font-semibold">Name:   <b>{{user_profile.firstname}}</b></span>
+    <span class="block capitalize font-semibold">Name:   <b>{{profile.firstname}}</b></span>
     </div>
     <div>
-    <span class="block capitalize font-semibold">Surname:   <b>{{user_profile.lastname}}</b></span>
+    <span class="block capitalize font-semibold">Surname:   <b>{{profile.lastname}}</b></span>
     </div>
     <div>
-    <span class="block capitalize font-semibold">Bio:   <b>{{user_profile.bio}}</b></span>
+    <span class="block capitalize font-semibold">Bio:   <b>{{profile.bio}}</b></span>
     </div>
     <div>
-    <span class="block capitalize font-semibold">Location:   <b>{{user_profile.location}}</b></span>
+    <span class="block capitalize font-semibold">Location:   <b>{{profile.location}}</b></span>
     </div>
 
 
