--- a/templates/main.html
+++ b/templates/main.html
@@ -63,7 +63,7 @@
                         
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="/profile/">View Profile</a></li>
+                                <li><a href="/profile/?user_pk={{user.pk}}">View Profile</a></li>
                                 <li><a href="/logout/">Log Out</a></li>
                             </ul>
                         </div>
@@ -98,7 +98,7 @@
                                             {% endif %}
                                         </div>
                                     </a>
-                                    <a href="/another_profile?user_pk={{p.author.pk}}"
+                                    <a href="/profile?user_pk={{p.author.pk}}"
                                     <span class="block capitalize font-semibold "> {{p.author}} </span> 
                                 </a>
                                 </div>
