--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,7 +43,7 @@
             <div class="col-lg-2 col-sm-3">
               <div class="user-avatar">
                 <figure>
-                  {% if profile.profile_picture %}
+                  {% if profile.profile_picture.url %}
                   <img
                     src="{{profile.profile_picture.url}}"
                     style="height: 250px; width: 100%"
