--- a/templates/another_profile.html
+++ b/templates/another_profile.html
@@ -40,7 +40,7 @@
             <div class="col-lg-2 col-sm-3">
               <div class="user-avatar">
                 <figure>
-                  {% if user_profile.profile_picture.url %}
+                  {% if user_profile.profile_picture %}
                   <img
                     src="{{user_profile.profile_picture.url}}"
                     style="height: 250px; width: 100%"
