--- a/templates/main.html
+++ b/templates/main.html
@@ -134,6 +134,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
                                             </svg>
+                                            <p>like</p> 
                                         </div>
                                         
                                     </a>
@@ -142,6 +143,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path fill-rule="evenodd" d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z" clip-rule="evenodd" />
                                             </svg>
+                                            <p>comment</p>
                                         </div>
                                         
                                     </a>
@@ -152,24 +154,28 @@
                                     <div class="">
                                          <strong>{{p.number_of_likes}}</strong> likes and<strong>
                                              {{number_of_comments}}</strong> comments
-
+                                        
                                              {% if not p.comments.all %}
                                              <h2>No comments</h2>
                                              {% else %}
                                              {% for comment in p.comments.all %}
+                                             <br>
                                              <strong>{{comment.author}}</strong>
                                              <br>
-                                             <p>{{comment.text}}</p>
-                                             <br>
-                                             <p>{{comment.commented_at}}</p>
+                                             <h2>{{comment.text}}</h2>
+                                             <p class="font-semibold">{{comment.commented_at}}</p>
                                              {% endfor %}
                                              {% endif %} 
                                             </div>
                                         </div>
+                                        <div class="border-t pt-4 space-y-4 ">
+                                        </div>
+                                    </div>
+                                </div>
                                              
-                                             {% endfor %}
+                                {% endfor %}
                                              
-                                            <style>
+                                <style>
                             .center {
                               text-align: center;
                             }
