fixed bug that didnt show post pictures

--- a/templates/main.html
+++ b/templates/main.html
@@ -100,13 +100,13 @@
                                 
 
                                 <h2><strong>{{p.title}}</strong></h2>
-
+                                
                                 {% if p.image %}
-                                <p img src="{{p.image.url}}"></p>
+                                <img src="{{p.image.url}}"></img>
                                 {% else %}
                                 <p>No Image</p>
                                 {% endif %} 
-
+                    
 
                                 <h1>{{p.text}}</h1>
 
