--- a/templates/login.html
+++ b/templates/login.html
@@ -66,6 +66,7 @@
             <input
               type="text"
               name="username"
+              id="username"
               placeholder="Username"
               class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
               style="border: 1px solid #d3d5d8 !important"
@@ -73,6 +74,7 @@
             <input
               type="password"
               name="password"
+              id="password"
               placeholder="Password"
               class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
               style="border: 1px solid #d3d5d8 !important"
