--- a/templates/emails/email.html
+++ b/templates/emails/email.html
@@ -3,7 +3,7 @@
 {% block html_body %}
 <p>Hi <strong>{{username}}</strong></p>
 
-<p>You just signed up for my website</p>
+<p>You just signed up on my website</p>
 
 <p>Thank You</p>
 {% endblock %}
