--- a/templates/another_profile.html
+++ b/templates/another_profile.html
@@ -93,6 +93,37 @@
     <span class="block capitalize font-semibold">Location:   <b>{{user_profile.location}}</b></span>
     </div>
 
+   
+
+    <div class="container m-auto">
+      
+      {% for p in posts %}
+      <!-- left sidebar-->
+      <div class="space-y-5 flex-shrink-5 lg:w-7/20">
+        
+        <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
+          
+          <!-- post -->
+                        <h2><strong>{{p.title}}</strong></h2>
+                        
+                        {% if p.image %}
+                        <img src="{{p.image.url}}"></img>
+                        {% else %}
+                        <h5>No Image</h5>
+                        {% endif %} 
+            
+
+                        <h5>{{p.text}}</h5>
+
+                        <p>{{p.created_at}}</p>
+                        <div class="">
+                          <strong>{{p.number_of_likes}}</strong> likes and<strong>
+                              {{p.comments.count}}</strong> comments
+                              <hr>
+                            </div>  
+                          </div>
+                    
+                          {% endfor %}
     <script
       data-cfasync="false"
       src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"
