--- a/templates/profile.html
+++ b/templates/profile.html
@@ -113,6 +113,7 @@
                             <!-- post -->
                                 <h2><strong>{{p.title}}</strong></h2>
                                 
+                                
                                 {% if p.image %}
                                 <img src="{{p.image.url}}"></img>
                                 {% else %}
@@ -126,9 +127,14 @@
                                 <div class="">
                                   <strong>{{p.number_of_likes}}</strong> likes and<strong>
                                       {{p.comments.count}}</strong> comments
+                                      <a href="/update_post?post_id={{p.pk}}" class="flex items-center space-x-2"  style="background-color: pink; border: #ffc0cb">  <b  style="color:grey">update post</b></a>
+                                      
+                                      <a href="/delete_post?post_id={{p.pk}}" class="flex items-center space-x-2"  style="background-color: pink; border: #ffc0cb">  <b  style="color:grey">delete post</b></a>
+
                                       <hr>
                                     </div>  
                                   </div>
+                                 
                             
                                   {% endfor %}
     <script
