--- a/templates/another_profile.html
+++ b/templates/another_profile.html
@@ -26,7 +26,7 @@
           <div class="add-btn">
             <span style="color: white; font-size: 27px; margin-right: 700px"
               ><b
-                ><u><a href="/main/">Home</a></u></b
+                ><u><a href="/">Home</a></u></b
               ></span
             > 
             <span style="color: white; font-size: 27px"><b>{{profile_user.user.username}}</b></span>
