--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -26,7 +26,7 @@
             <div class="container m-auto"> 
 
                 <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3">  
-                  <a href="/main/">Home</a></h1>
+                  <a href="/">Home</a></h1>
                   <br>
                   <hr>
                 <div class="grid lg:grid-cols-3 mt-12 gap-8">
