--- a/templates/login.html
+++ b/templates/login.html
@@ -34,6 +34,7 @@
               <a
                 href="/register/"
                 class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white"
+                style="margin-left: 950px"
                 >Register</a
               >
             </div>
