--- a/templates/register.html
+++ b/templates/register.html
@@ -34,6 +34,7 @@
               <a
                 href="/login/"
                 class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white"
+                style="margin-left: 950px"
                 >Log in</a
               >
             </div>
