change color of update profile button

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
               >Number of posts:  <b>{{number_of_posts}}</b></span>
             
             <a href="/update_profile/" style="background-color: #ffc0cb; border: #ffc0cb">
-                <b>update profile</b>
+                <b style="color: grey">update profile</b>
             </a>
           </div>
         </form enctype="multipart/form-data">
