--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -18,7 +18,7 @@
     <div class="create-profile-form">
       <p class="profile-picture-label">Profile picture:</p>
       <h1 class="sign-up-header">Create profile</h1>
-      
+      <form action="" method="post">
       {% csrf_token %}
   
       {% for hidden in form.hidden_fields %}
