--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
     <!-- content-->
     <div class="register-form">
     <h1 class="sign-up-header">Sign Up</h1>
-
+    <form action="" method="post">
     {% csrf_token %}
 
     {% for hidden in form.hidden_fields %}
