--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -19,7 +19,7 @@
     <div class="create-profile-form">
       <p class="post-image-label">Post image:</p>
       <h1 class="sign-up-header">Upload post</h1>
-      <form action="" method="post">
+      <form action="" enctype="multipart/form-data" method="post">
       {% csrf_token %}
   
       {% for hidden in form.hidden_fields %}
