--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,10 +21,9 @@
 
       <span class="number-of-posts">Number of posts: {{number_of_posts}}</span>
       <div class="user-avatar">
-        {% if %}
-        <!-- {% if profile.profile_picture %}
+        {% if profile.profile_picture %}
           <img src="{{profile.profile_picture.url}}" alt="no image">
-        {% else %} -->
+        {% else %} 
           <img src="/static/images/blank-profile-picture.png" alt="no image" width="220px" height="230px" style="border-radius: 10px; border: 3px solid #4a82fe">
         {% endif %}
       </div>
